# axiom2

./: .env.example  AUTH_SETUP.md  Cargo.toml  build.rs
examples/: discover_services.rs
mockups/: 01_current_improved.txt  02_chart_dominant.txt
protos/: geyser.proto
src/: main.rs  types.rs
src/cli/: input.rs  mod.rs  prompt.rs
src/engine/: fdv_engine.rs  mod.rs  price_engine.rs  slot_engine.rs
src/events/: event_bus.rs  mod.rs  trade_event.rs
src/metadata/: metaplex.rs  mod.rs  resolver.rs
src/parser/: balance_deltas.rs  mod.rs  transaction_decoder.rs  transaction_parser.rs
src/stream/: mod.rs  polling_client.rs  websocket_client.rs  yellowstone_client.rs
src/swap/: detector.rs  mod.rs  trade_normalizer.rs
src/ui/: console.rs  draw.rs  mod.rs
