[package]
name = "axiom_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
async-stream = "0.3"

# gRPC - native Windows support
tonic = { version = "0.12", features = ["tls", "transport", "channel", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"
tower = "0.5"
http = "1.1"
http-body = "1.0"
rustls-native-certs = "0.8"
rustls = { version = "0.23", features = ["ring"] }

# Base58 encoding
bs58 = "0.5"

# Serialization
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for metadata RPC calls
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
base64 = "0.21"
dotenvy = "0.15"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tonic-reflection = "0.14.5"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
protoc-bin-vendored = "3.2"
